GeneratePDF/objects/Generate_PDF__c/Generate_PDF__c.object-meta.xml
<CustomObject>
    <label>Generate PDF</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Generate PDF</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>