GeneratePDF/objects/Generate_PDF__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Generate PDF</relationshipLabel>
    <relationshipName>Generate_PDF</relationshipName>
    <type>Lookup</type>
</CustomField>