GeneratePDF/objects/Generate_PDF__c/fields/Additional_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Additional_Recipient__c</fullName>
    <label>Additional Recipient</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>