GeneratePDF/objects/Generate_PDF__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Generate PDF</relationshipLabel>
    <relationshipName>Generate_PDF</relationshipName>
    <type>Lookup</type>
</CustomField>