GeneratePDF/objects/Generate_PDF__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Generate PDF</relationshipLabel>
    <relationshipName>Generate_PDF</relationshipName>
    <type>Lookup</type>
</CustomField>