GeneratePDF/objects/Generate_PDF__c/fields/Case_ICP__c.field-meta.xml
<CustomField>
    <fullName>Case_ICP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case ICP</label>
    <referenceTo>Case_ICP__c</referenceTo>
    <relationshipLabel>Generate PDF</relationshipLabel>
    <relationshipName>Generate_PDF</relationshipName>
    <type>Lookup</type>
</CustomField>