GeneratePDF/objects/Generate_PDF__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Generate PDF</relationshipLabel>
    <relationshipName>Generate_PDF</relationshipName>
    <type>Lookup</type>
</CustomField>