GeneratePDF/objects/Generate_PDF__c/fields/Download_Path__c.field-meta.xml
<CustomField>
    <fullName>Download_Path__c</fullName>
    <label>Download Path</label>
    <type>Url</type>
</CustomField>