GeneratePDF/objects/Generate_PDF__c/fields/Email_TemplateId__c.field-meta.xml
<CustomField>
    <fullName>Email_TemplateId__c</fullName>
    <label>Email TemplateId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>