GeneratePDF/objects/Generate_PDF__c/fields/File_Template__c.field-meta.xml
<CustomField>
    <fullName>File_Template__c</fullName>
    <label>File Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>