GeneratePDF/objects/Generate_PDF__c/fields/File_TemplateId__c.field-meta.xml
<CustomField>
    <fullName>File_TemplateId__c</fullName>
    <label>File TemplateId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>