GeneratePDF/objects/Generate_PDF__c/fields/Meter_Station__c.field-meta.xml
<CustomField>
    <fullName>Meter_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meter Station</label>
    <referenceTo>Meter_Station__c</referenceTo>
    <relationshipLabel>Generate PDF</relationshipLabel>
    <relationshipName>Generate_PDF</relationshipName>
    <type>Lookup</type>
</CustomField>